--- a/app/views/items/show.html.erb
+++ b/app/views/items/show.html.erb
@@ -28,7 +28,9 @@
     
     <%# 商品が売れていない場合はこちらを表示しましょう %>
     <% else %>
+    <% unless @item.management.present? %> 
     <%= link_to '購入画面に進む ',item_pres_path(@item.id) ,class:"item-red-btn"%>
+    <% end %>
     <% end %>
     <%# //商品が売れていない場合はこちらを表示しましょう %>
 
